force-app/main/default/objects/Vessel_ID__c/Vessel_ID__c.object-meta.xml
<CustomObject>
    <label>Vessel ID</label>
    <nameField>
        <label>Vessel ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vessel IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>