force-app/main/default/objects/Vessel_ID__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>