force-app/main/default/objects/Vessel_ID__c/fields/Genotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Genotype_ID__c</fullName>
    <formula>Variety__r.Strain__r.Genotype_ID__c</formula>
    <label>Genotype ID</label>
    <type>Text</type>
</CustomField>