force-app/main/default/objects/Vessel_ID__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T00</fullName>
            </value>
            <value>
                <fullName>T01</fullName>
            </value>
            <value>
                <fullName>T02</fullName>
            </value>
            <value>
                <fullName>EOL</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>RTV</fullName>
            </value>
            <value>
                <fullName>PLT</fullName>
            </value>
            <value>
                <fullName>DEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>