force-app/main/default/objects/Vessel_ID__c/fields/Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type__c</fullName>
    <label>Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiplication</fullName>
            </value>
            <value>
                <fullName>Snipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>