force-app/main/default/objects/Vessel_ID__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <formula>Variety__r.Strain__r.Name</formula>
    <label>Strain</label>
    <type>Text</type>
</CustomField>