force-app/main/default/objects/Vessel_ID__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Vessel IDs</relationshipLabel>
    <relationshipName>Vessel_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>