force-app/main/default/objects/Vessel_ID__c/fields/Vessel_Code__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Code__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Vessel Code</label>
    <type>AutoNumber</type>
</CustomField>