force-app/main/default/objects/Vessel_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Density__c</columns>
    <columns>In_Use__c</columns>
    <columns>Phase__c</columns>
    <columns>Stock_Type__c</columns>
    <columns>Variety__c</columns>
    <columns>Strain__c</columns>
    <columns>Genotype_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>